# Solvionyx-OS

./: .gitignore  01-welcome.html  02-features.html  03-complete.html  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  PHASE1-BUILD-AND-TEST-GUIDE.md  README.md  README_CICD.md  ROADMAP.md  SECURITY.md  bootloader.conf  build_iso_debian.sh  build_iso_debian.sh.bak  cleanup_full_repo.sh  cleanup_repo.sh  cubic.conf  db.crt.b64  db.key.b64  displaymanager.conf  finished.conf  fix_build_dir.sh  fix_gpg.sh  keyboard.conf  locale.conf  locale.conf.disabled  network.conf  partition.conf  run-solvy.sh  services.conf  solvionyx-fixes.patch  solvy-deb.deb  solvy_3.0_amd64.deb  solvy_portable_daemon.py  solvy_portable_gui.py  unpackfs.conf  users.conf  welcome.conf
Solvionyx-OS-main/: CHANGELOG.md  README_AUTOBUILD.md
Solvionyx-OS-v4.3.6-Aurora/: build_iso_debian.sh
Solvionyx-OS-v4.3.8-Aurora/: .gitignore  (+1 more)
app-store/: meson.build
app-store/data/: com.solvionyx.AppStore.desktop
app-store/data/ui/: app_card.ui  app_page.ui  category_view.ui  search_header.ui  sidebar.ui  update_view.ui
app-store/src/: main.vala  window.vala
app-store/src/backend/: apt_backend.vala  flatpak_backend.vala
app-store/src/ui/: app_card.vala  app_page.vala  category_view.vala  search_header.vala  sidebar.vala  update_view.vala
system-manager/: meson.build
system-manager/data/: org.solvionyx.SystemManager.desktop
system-manager/data/ui/: about.ui  drivers.ui  layouts.ui  network.ui  system_info.ui  themes.ui  updates.ui
system-manager/src/: main.vala  window.vala
system-manager/src/pages/: about.vala  drivers.vala  layouts.vala  network.vala  system_info.vala  themes.vala  updates.vala
(+275 files in other folders)
